// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GDCTrack widget renders gene with just the required model elements 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1ps6pg7-MuiPaper-root"
  data-testid="variant-widget"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters css-1elwnq4-MuiPaper-root-MuiAccordion-root"
  >
    <div
      aria-expanded="true"
      class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded MuiAccordionSummary-gutters css-sh22l5-MuiButtonBase-root-MuiAccordionSummary-root"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAccordionSummary-content Mui-expanded MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
      >
        <span
          class="MuiTypography-root MuiTypography-button css-1f0on15-MuiTypography-root"
        >
           
          cell adhesion molecu... - protein_coding
        </span>
      </div>
      <div
        class="MuiAccordionSummary-expandIconWrapper Mui-expanded css-yw020d-MuiAccordionSummary-expandIconWrapper"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium tss-rb1zhf-expandIcon css-i4bv87-MuiSvgIcon-root"
          data-testid="ExpandMoreIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
        </svg>
      </div>
    </div>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
        >
          <div
            class="MuiAccordion-region"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root tss-1g973hk-expansionPanelDetails css-15v22id-MuiAccordionDetails-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                Core details
              </p>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                >
                  Position
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    3:196,596..409,417 
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                >
                  Description
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    The protein encoded by this gene is a member of the L1 gene family of neural cell adhesion molecules. It is a neural recognition molecule that may be involved in signal transduction pathways. The deletion of one copy of this gene may be responsible for mental defects in patients with 3p- syndrome. This protein may also play a role in the growth of certain cancers. Alternate splicing results in both coding and non-coding variants. [provided by RefSeq, Nov 2011]
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                >
                  Name
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    cell adhesion molecule L1-like
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                >
                  Length
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    212,822
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                >
                  Type
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    protein_coding
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
              />
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                Attributes
              </p>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                  style="width: 128px;"
                >
                  biotype
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    protein_coding
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                  style="width: 128px;"
                >
                  geneChromosome
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    3
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                  style="width: 128px;"
                >
                  geneEnd
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    409417
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                  style="width: 128px;"
                >
                  geneStart
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    196596
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                  style="width: 128px;"
                >
                  geneStrand
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    1
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                  style="width: 128px;"
                >
                  id
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    R2VuZTpFTlNHMDAwMDAxMzQxMjEjZTQ2MDk1NGM4MmZiMjczYjIwNTk1MDliODFkZTZmYjEj
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                  style="width: 128px;"
                >
                  symbol
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    CHL1
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                >
                  synonyms
                </div>
                <div
                  class="tss-1pxsuda-fieldSubvalue"
                >
                  <div
                    class="tss-1omt041-fieldValue"
                  >
                    <div>
                      CALL
                    </div>
                  </div>
                </div>
                <div
                  class="tss-1pxsuda-fieldSubvalue"
                >
                  <div
                    class="tss-1omt041-fieldValue"
                  >
                    <div>
                      FLJ44930
                    </div>
                  </div>
                </div>
                <div
                  class="tss-1pxsuda-fieldSubvalue"
                >
                  <div
                    class="tss-1omt041-fieldValue"
                  >
                    <div>
                      L1CAM2
                    </div>
                  </div>
                </div>
                <div
                  class="tss-1pxsuda-fieldSubvalue"
                >
                  <div
                    class="tss-1omt041-fieldValue"
                  >
                    <div>
                      MGC132578
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
  />
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
  />
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
  />
</div>
`;

exports[`GDCTrack widget renders mutation with just the required model elements 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1ps6pg7-MuiPaper-root"
  data-testid="variant-widget"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters css-1elwnq4-MuiPaper-root-MuiAccordion-root"
  >
    <div
      aria-expanded="true"
      class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded MuiAccordionSummary-gutters css-sh22l5-MuiButtonBase-root-MuiAccordionSummary-root"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAccordionSummary-content Mui-expanded MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
      >
        <span
          class="MuiTypography-root MuiTypography-button css-1f0on15-MuiTypography-root"
        >
           
          Simple Somatic Mutation
        </span>
      </div>
      <div
        class="MuiAccordionSummary-expandIconWrapper Mui-expanded css-yw020d-MuiAccordionSummary-expandIconWrapper"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium tss-rb1zhf-expandIcon css-i4bv87-MuiSvgIcon-root"
          data-testid="ExpandMoreIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
        </svg>
      </div>
    </div>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
        >
          <div
            class="MuiAccordion-region"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root tss-1g973hk-expansionPanelDetails css-15v22id-MuiAccordionDetails-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                Core details
              </p>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                >
                  Position
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    chr3:377,918..377,918 
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                >
                  Length
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    1
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                >
                  Type
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    Simple Somatic Mutation
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
              />
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                Attributes
              </p>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                  style="width: 120px;"
                >
                  chromosome
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    chr3
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                  style="width: 120px;"
                >
                  endPosition
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    377918
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                  style="width: 120px;"
                >
                  genomicDnaChange
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    chr3:g.377918G&gt;A
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                  style="width: 120px;"
                >
                  mutationSubtype
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    Single base substitution
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                  style="width: 120px;"
                >
                  mutationType
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    Simple Somatic Mutation
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                  style="width: 120px;"
                >
                  ncbiBuild
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    GRCh38
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                  style="width: 120px;"
                >
                  referenceAllele
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    G
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                  style="width: 120px;"
                >
                  score
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    3
                  </div>
                </div>
              </div>
              <div
                class="tss-1m8nxnb-field"
              >
                <div
                  class="tss-1y9c7n2-fieldName"
                  style="width: 120px;"
                >
                  startPosition
                </div>
                <div
                  class="tss-1omt041-fieldValue"
                >
                  <div>
                    377918
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
  />
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
  />
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
  />
</div>
`;
